fix mobile nav brand overflow

--- a/static/css/_bootstrap-mod.scss
+++ b/static/css/_bootstrap-mod.scss
@@ -66,6 +66,10 @@ code{
   padding: 0px;
   line-height: 50px;
   height: 50px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: calc(100vw - 70px);
   img {
     margin-right: 5px; 
   }
